--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
     </build>
     <modules>
         <module>MINI_ASSIGNMENT2</module>
+        <module></module>
+        <module>Main_Assignment</module>
     </modules>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
